--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -51,17 +51,16 @@ jobs:
     inputs:
       packageType: 'sdk'
       version: '3.1.102'
-      
+
   - task: DotNetCoreCLI@2
     displayName: Restore
     inputs:
       command: restore
       projects: '$(buildProjects)'
-      feedsToUse: 'select'
-      vstsFeed: 'Fixit'
       includeNuGetOrg: true
-      nobuild: true
-
+      feedsToUse: 'config'
+      nugetConfigPath: 'nuget.config'
+      
   - task: DotNetCoreCLI@2
     displayName: Build
     inputs:
